--- a/index.html
+++ b/index.html
@@ -4,11 +4,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My JavaScript App</title>
+  <!--Bootswatch-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/cosmo/bootstrap.min.css" integrity="sha384-5QFXyVb+lrCzdN228VS3HmzpiE7ZVwLQtkt+0d9W43LQMzz4HBnnqvVxKg6O+04d" crossorigin="anonymous">
+  <!--Font Awesome-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+
+  <title>Micropost App</title>
 </head>
 <body>
-  <h1>My JavaScript App</h1>
-  <p>This app was compiled using the Babel Webpack Starter Pack which can compile ES2015, ES2016 and ES2017 code including Async/Await</p>
+  <nav class="navbar navbar-dark bg-primary">
+    <div class="container">
+      <a href="#" class="navbar-brand">MicroPost</a>
+    </div>
+  </nav>
+
+  <div class="container postsContainer">
+    <div class="card card-body card-form">
+      <h1>Say Something</h1>
+      <p class="lead">What's on your mind?</p>
+
+      <div class="form-group">
+        <input type="text" id="title" class="form-control" placeholder="Post Title">
+      </div>
+      <div class="form-group">
+        <textarea id="body" class="form-control" placeholder="Post Body"></textarea>
+      </div>
+
+      <input type="hidden" id="id" value="">
+      <button class="post-submit btn btn-primary btn-block">Post It</button>
+      <span class="form-end"></span>
+    </div>
+    <br>
+
+    <!--To be dynamically inserted-->
+    <div id="post"></div>
+
+  </div>
+
+  <footer class="mt-5 p-3 text-center bg-light">
+    MicroPosts @copy;
+  </footer>
+  
   
 
   <!--This is the Babel Webpack compiled ES5 code-->
